--- a/docs/.vitepress/theme/custom.scss
+++ b/docs/.vitepress/theme/custom.scss
@@ -25,3 +25,11 @@
     border: unset;
   }
 }
+
+.mdp-demo__preview code {
+  display: inline-block;
+}
+.mdp-demo__preview pre {
+  margin: 0;
+  line-height: 1.5;
+}
