--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -8,18 +8,54 @@
       * { box-sizing: border-box; }
     </style>
 
+    <!-- 共享 Vue 内存，以便实现数据响应 -->
     <script>
-      if (window.parent) {
-        window.Vue = window.parent.Vue
+      if (window.parent) window.Vue = window.parent.Vue
+    </script>
 
+
+
+    <!-- 解决 iframe 不支持鼠标事件的问题 -->
+    <script type="module">
+      import { pick } from '@el-lowcode/utils'
+
+      if (window.parent) {
         document.addEventListener('wheel', e => {
           e.preventDefault()
           e.stopPropagation()
-          frameElement.dispatchEvent(new WheelEvent(e.type, e))
+          
+          const rect = frameElement.getBoundingClientRect()
+          const x = e.x + rect.x, y = e.y + rect.y
+
+          const event = new WheelEvent(e.type, {
+            ...pick(e, [
+              'deltaMode', 'deltaX', 'deltaY', 'deltaZ',
+              'button', 'buttons',
+              'screenX', 'screenY',
+              'detail', 'which',
+              'altKey', 'ctrlKey', 'metaKey', 'shiftKey',
+              // 'modifierAltGraph', 'modifierCapsLock', 'modifierFn', 'modifierFnLock', 'modifierHyper', 'modifierNumLock', 'modifierScrollLock', 'modifierSuper', 'modifierSymbol', 'modifierSymbolLock',
+              'bubbles', 'cancelable', 'composed'
+            ]),
+            // view: parent,
+            clientX: x, clientY: y,
+          })
+          
+          frameElement.dispatchEvent(event)
+        }, { passive: false, capture: true })
+
+        document.addEventListener('mousedown', e => {
+          if (e.button != 1) return
+          e.preventDefault()
+          e.stopPropagation()
+          frameElement.dispatchEvent(new parent.MouseEvent(e.type, e))
         }, { passive: false })
       }
     </script>
 
+    
+  
+    <!-- 渲染 JSON -->
     <script type="module">
       import { createApp, h } from 'vue'
       import ElLowcode, { ConfigProvider } from 'el-lowcode'
