--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -2,9 +2,9 @@
 <html class="sl-theme-dark mdui-theme-auto dark">
   <head>
     <style>
-      html, body, .Page { width: 100%; height: 100%; }
+      html, body { width: 100%; height: 100%; }
       body { margin: 0; }
-      .Page { overflow: auto; }
+      .Page { min-height: 100%; }
       * { box-sizing: border-box; }
 
       /* element-plus */
