--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -4,7 +4,7 @@
     <style>
       html, body { width: 100%; height: 100%; }
       body { margin: 0; }
-      .Page { min-height: 100%; }
+      .Page { min-height: 100%; overflow: hidden; }
       * { box-sizing: border-box; }
 
       /* element-plus */
