--- a/packages/designer/style.scss
+++ b/packages/designer/style.scss
@@ -26,22 +26,24 @@
   position: relative;
   outline: 0 !important;
 
-  &:focus::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    z-index: 1;
-    pointer-events: none;
-    outline: 1px solid var(--vs-focus-b-c);
-    outline-offset: -1px;
-  }
-  &:focus .vs-li.focused {
-    outline: 1px solid var(--vs-focus-b-c);
-    outline-offset: -1px;
-  }
-  &:focus .vs-li.selected {
-    color: var(--vs-li-activeSelectionC);
-    background: var(--vs-li-activeSelectionBg);
+  &:focus, &.focus {
+    &::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      z-index: 1;
+      pointer-events: none;
+      outline: 1px solid var(--vs-focus-b-c);
+      outline-offset: -1px;
+    }
+    & .vs-li.focused {
+      outline: 1px solid var(--vs-focus-b-c);
+      outline-offset: -1px;
+    }
+    & .vs-li.selected {
+      color: var(--vs-li-activeSelectionC);
+      background: var(--vs-li-activeSelectionBg);
+    }
   }
 
   &.element-focused, &.element-selection {
