--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -3,8 +3,7 @@
   <head>
     <style>
       html, body { display: flex; flex-direction: column; flex: 1; width: 100%; min-height: 100%; margin: 0; padding: 0; }
-      [lcd-root] { flex: 1; overflow: hidden; }
-      [lcd-root] { min-height: 100%; overflow: hidden; }
+      [lcd-root] { flex: 1; min-height: 100%; overflow: hidden; }
       * { box-sizing: border-box; }
 
       /* element-plus */
