--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -2,8 +2,8 @@
 <html class="sl-theme-dark mdui-theme-auto dark" style="color-scheme: dark;">
   <head>
     <style>
-      html, body { display: flex; flex-direction: column; flex: 1; width: 100%; min-height: 100%; margin: 0; padding: 0; }
-      [lcd-root] { flex: 1; min-height: 100%; overflow: hidden; }
+      html, body { display: flex; flex-direction: column; flex: 1; width: 100%; height: 100%; margin: 0; padding: 0; }
+      [lcd-root] { flex: 1; }
       * { box-sizing: border-box; }
 
       /* element-plus */
