--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -2,7 +2,7 @@
 <html class="sl-theme-dark mdui-theme-auto dark" style="color-scheme: dark;">
   <head>
     <style>
-      html, body { display: flex; flex-direction: column; flex: 1; width: 100%; height: 100%; margin: 0; padding: 0; }
+      html, body { display: flex; flex-direction: column; flex: 1 0 content; width: 100%; height: 100%; margin: 0; padding: 0; }
       [lcd-root] { flex: 1; }
       * { box-sizing: border-box; }
 
@@ -28,7 +28,16 @@
 
       if (window.parent) {
         document.addEventListener('wheel', e => {
-          if (e.altKey) return
+          if (e.altKey) {
+            if (
+              e.deltaY < 0 && window.scrollY == 0 ||
+              e.deltaY > 0 && window.scrollY + 1 >= (document.documentElement.scrollHeight - window.innerHeight)
+            ) {
+              e.preventDefault()
+              e.stopPropagation()
+            }
+            return
+          }
           e.preventDefault()
           e.stopPropagation()
           
