--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -140,7 +140,11 @@
       app.use(ElLowcode)
       app.mount(document.body)
 
-      window.app = app
+      app._context.reload = void 0
+
+      window.unmount = () => {
+        app.unmount()
+      }
     </script>
   </head>
   <body>
