--- a/packages/designer/layout/components/iframe-temp.html
+++ b/packages/designer/layout/components/iframe-temp.html
@@ -5,6 +5,7 @@
       html, body { display: flex; flex-direction: column; flex: 1 0 content; width: 100%; height: 100%; margin: 0; padding: 0; }
       [lcd-root] { flex: 1; }
       [lcd-dragged] { transition: none !important; }
+      [lcd-text] { outline: 0; }
       * { box-sizing: border-box; }
 
       /* element-plus */
