--- a/packages/designer/style.scss
+++ b/packages/designer/style.scss
@@ -33,8 +33,12 @@
   --vs-btn-hover-bg: #1177bb;
 }
 
-.monaco-workbench, .monaco-base, .vs-base {
+@mixin vs-base {
   @apply text-13 lh-[1.4] select-none c-[--vs-c];
+}
+
+.monaco-workbench, .monaco-base, .vs-base {
+  @include vs-base;
 }
 
 .vs-sidebar {
@@ -163,6 +167,7 @@
 }
 
 .vs-table {
+  @include vs-base;
   @apply border-collapse text-left b-[--vs-table-b-c];
   > tr:first-child {
     @apply b-b-1 b-b-solid b-b-[--vs-table-b-c] bg-[--vs-table-th-bg];
