--- a/packages/designer/style.scss
+++ b/packages/designer/style.scss
@@ -7,6 +7,7 @@
   --vs-li-hover-bg: var(--vscode-list-hoverBackground, #2a2d2e);
   --vs-li-activeSelectionBg: #04395e;
   --vs-li-inactiveSelectionBg: #37373d;
+  --vs-li-selected-bg: #37373d;
   --vs-li-activeSelectionC: #fff;
   --vs-tree-indentGuidesStroke: #585858;
   --vs-sidebar-bg: #252526;
